forecast/src/objects/SpecialistForecastQuota__c.object
<CustomObject>
    <label>Specialist Forecast Quota</label>
    <pluralLabel>Specialist Forecast Quotas</pluralLabel>
    <description>Specialist Forecast Quotas used for the Specialist Forecasting Package, allow uses to be a assigned a Quota for each forecast.</description>

    <sharingModel>Private</sharingModel>


    <fields>
        <fullName>Month__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <inlineHelpText>The month the forecast quota applies to.</inlineHelpText>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <inlineHelpText>The fiscal year the quota applies to.</inlineHelpText>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY17</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuotaAmount__c</fullName>
        <inlineHelpText>Quota amount for For Individual AE</inlineHelpText>
        <label>Quota Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QuotaNotes__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Quota Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SpecialistForecastUser__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User Lookup for Sales Engineer/Executive</inlineHelpText>
        <label>Forecast User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SpecialistForecastUser</relationshipName>
        <type>Lookup</type>
    </fields>

    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QuotaAmount__c</columns>
        <columns>SpecialistForecastUser__c</columns>
        <columns>FiscalYear__c</columns>
        <columns>Month__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>

    <nameField>
        <displayFormat>SFQ-{00000000}</displayFormat>
        <label>Specialist Forecast Quota</label>
        <type>AutoNumber</type>
    </nameField>


</CustomObject>